# bachelor_thesis

./: CMakeLists.txt  all_lines_experiment1.csv  all_lines_experiment2.csv  cluster_points_to subspaces.h  clustered_data_experiment1.csv  clustered_data_experiment2.csv  clustering_accuracy.h  color_utils.h  detected_lines.csv  detected_subspaces.csv  detected_subspaces_experiment1.csv  detected_subspaces_experiment2.csv  experiment_config.h  experiment_config_2.h  fitted_plots.ipynb  flat.h  generated_data.csv  generated_data2.csv  generated_data_experiment1.csv  generated_data_experiment2.csv  main.cpp  mean_Qdf.h  mean_qdf_experiment1.csv  mean_qdf_experiment2.csv  mean_qdf_lines.h  medianW_qdf.h  median_qdf.h  merge_csv.h  progressive.h  python_wrapper_bachelor.py  qdf.h  qdf_analysis.h  qdf_representation_experiment1.csv  qdf_representation_experiment2.csv  ransac_line.h  ransac_multiD.h  stair_4.csv  star11_data.csv  star5_data.csv
